--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
     </header>
 
     <main>
+        <section class="hero">
+            <div class="hero__grid"></div>
+            <div class="hero__grid-content"></div>
+            <h1> Una gran comunidad de aprendizaje online en vivo</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius minus nobis, aliquid est blanditiis
+                similique doloremque consequuntur. Tempore sapiente eum consectetur quibusdam commodi, voluptatum
+                nostrum explicabo labore eos facilis illo.</p>
+            <a href=""> Ver todos los cursos</a>
+            <video src="./clase6assets 3/video/coder.mp4" autoplay muted loop></video>
+        </section>
         <section class="courses container">
             <h2 class="courses__title">Ultimos cursos y carreras</h2>
             <div class="courses__grid">
