--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <title>Document</title>
 </head>
 
@@ -75,7 +76,25 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <div>
+                <h4>educacion</h4>
+                <ul>
+                    <li><a href=""></a>diseño UX/UI</li>
+                    <li><a href=""></a>programacion</li>
+                    <li><a href=""></a>ciberseguridad</li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+            <div></div>
+            <div>
+                <h3>sumate a CODER y lleva tu carrera al siguiente nivel</h3>
+                <i class="bi bi-twitter"></i>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
