--- a/index.html
+++ b/index.html
@@ -2,29 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coder Clone</title>
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <!-- fuente de google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet" />
+
+    <!-- iconos de bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
 </head>
 
 <body>
     <header class="header">
         <div class="header__content container">
             <h3>
-                <a class="content__title" href="./index.html">CODER</a>
+                <a href="./index.html" class="header__content-title">CODER</a>
             </h3>
             <nav>
-                <ul class="content__navbar">
-                    <li><a href="">Cursos y carreras</a></li>
+                <ul class="header__content-navbar">
+                    <li><a href="">Cursos y Carreras</a></li>
                     <li><a href="">Comunidad</a></li>
                     <li><a href="">Nosotros</a></li>
-                    <li><a href="">Plataforma</a></li>
+                    <li><a href="./pages/platform.html">Plataforma</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,63 +39,99 @@
             <div class="hero__grid container">
                 <div class="hero__grid-content">
                     <h1>Una gran comunidad de aprendizaje online en vivo</h1>
-                    <p>En nuestros cursos online en vivo vas a tener interacción real e
+                    <p>
+                        En nuestros cursos online en vivo vas a tener interacción real e
                         instantánea con tu profesor, tutor y compañeros, para resolver
-                        todas tus dudas y avanzar en tus proyectos prácticos.</p>
+                        todas tus dudas y avanzar en tus proyectos prácticos.
+                    </p>
                     <a href="">Ver todos los cursos</a>
                 </div>
-                <video class="hero__grid-video" src="./clase6assets 3/video/coder.mp4" autoplay muted loop></video>
+                <video class="hero__grid-video" src="./assets/video/coder.mp4" autoplay muted loop></video>
             </div>
         </section>
+
         <section class="courses container">
-            <h2 class="courses__title">Ultimos cursos y carreras</h2>
+            <h2 class="courses__title">Últimos cursos y carreras</h2>
             <div class="courses__grid">
                 <article class="card">
                     <div class="card__header">
                         <small class="card__header--strong">Nuevo</small>
-                        <img src="./clase6assets 3/images/web.jpg" alt="curso desarrollo web">
+                        <img src="./assets/images/web.jpg" alt="Curso de Desarrollo Web" />
                     </div>
-                    <h3 class="card__title">Curso de desarrollo Web</h3>
-                    <p class="card__description">Te sumergiras en las mejores practicas de desarrollo Web</p>
-                    <a class="card__link" href="">Saber mas </a>
+                    <h3 class="card__title">Curso de Desarrollo Web</h3>
+                    <p class="card__description">
+                        Te sumergirás en las mejores prácticas del desarrollo web con HTML
+                        y CSS.
+                    </p>
+                    <a class="card__link" href="">Saber más</a>
                 </article>
+
                 <article class="card">
                     <div class="card__header">
                         <small class="card__header--strong">Nuevo</small>
-                        <img src="./clase6assets 3/images/uxiu.jpg" alt="curso desarrollo web">
+                        <img src="./assets/images/uxiu.jpg" alt="Carrera de Diseño UX/UI" />
                     </div>
-                    <h3 class="card__title">Carrera diseño UX/UI</h3>
-                    <p class="card__description">Te sumergiras en las mejores practicas de desarrollo Web</p>
-                    <a class="card__link" href="">Saber mas </a>
+                    <h3 class="card__title">Carrera de Diseño UX/UI</h3>
+                    <p class="card__description">
+                        Aprenderás a analizar y mejorar la Experiencia de Usuario.
+                    </p>
+                    <a class="card__link" href="">Saber más</a>
                 </article>
+
                 <article class="card">
                     <div class="card__header">
                         <small class="card__header--strong">Nuevo</small>
-                        <img src="./clase6assets 3/images/js.jpg" alt="curso desarrollo web">
+                        <img src="./assets/images/js.jpg" alt="Curso de JavaScript" />
                     </div>
-                    <h3 class="card__title">Curso de Javascript</h3>
-                    <p class="card__description">Te sumergiras en las mejores practicas de desarrollo Web</p>
-                    <a class="card__link" href="">Saber mas </a>
+                    <h3 class="card__title">Curso de JavaScript</h3>
+                    <p class="card__description">
+                        Aprenderás los fundamentos del lenguaje de programación más usado.
+                    </p>
+                    <a class="card__link" href="">Saber más</a>
                 </article>
             </div>
         </section>
     </main>
-    <footer>
-        <div>
+
+    <footer class="footer">
+        <!-- grid -->
+        <div class="footer__grid container">
+            <!-- columna 1 -->
             <div>
-                <h4>educacion</h4>
-                <ul>
-                    <li><a href=""></a>diseño UX/UI</li>
-                    <li><a href=""></a>programacion</li>
-                    <li><a href=""></a>ciberseguridad</li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                <h4>Educación</h4>
+                <ul class="footer__grid-list">
+                    <li><a href="">Diseño UX/UI</a></li>
+                    <li><a href="">Programación</a></li>
+                    <li><a href="">Ciberseguridad</a></li>
+                    <li><a href="">Data</a></li>
+                    <li><a href="">Marketing Digital</a></li>
                 </ul>
             </div>
-            <div></div>
+
+            <!-- columna 2 -->
             <div>
-                <h3>sumate a CODER y lleva tu carrera al siguiente nivel</h3>
-                <i class="bi bi-twitter"></i>
+                <h4>Nosotros</h4>
+                <ul class="footer__grid-list">
+                    <li><a href="">Equipo</a></li>
+                    <li><a href="">Testimonios</a></li>
+                    <li><a href="">Términos y condiciones</a></li>
+                </ul>
+            </div>
+
+            <!-- columna 3 -->
+            <div>
+                <h3>Sumate a CODER y llevá tu carrera al siguiente nivel.</h3>
+                <div class="footer__rrss">
+                    <a href="">
+                        <i class="bi bi-twitter"></i>
+                    </a>
+                    <a href="">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                    <a href="">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </footer>
